external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/control_exp_autocomplete.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
warning[W10007]: issue with attribute value
  ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:3:9
  │
3 │ #[allow(ide_path_autocomplete)]
  │         ^^^^^^^^^^^^^^^^^^^^^ Unknown warning filter 'ide_path_autocomplete'

warning[W09002]: unused variable
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:14:24
   │
14 │     public fun test_if(a: A) {
   │                        ^ Unused parameter 'a'. Consider removing or prefixing with an underscore: '_a'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:16:5
   │
16 │     }
   │     ^
   │     │
   │     Unexpected '}'
   │     Expected an identifier or a decimal number

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:18:5
   │
18 │     public fun test_while() {
   │     ^^^^^^
   │     │
   │     Unexpected 'public'
   │     Expected ';'

warning[W09002]: unused variable
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:19:13
   │
19 │         let n = (42u64 as u32);
   │             ^ Unused local variable 'n'. Consider removing or prefixing with an underscore: '_n'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:21:5
   │
21 │     }
   │     ^
   │     │
   │     Unexpected '}'
   │     Expected an identifier or a decimal number

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:23:5
   │
23 │     public fun test_match(n: u64) {
   │     ^^^^^^
   │     │
   │     Unexpected 'public'
   │     Expected ';'

warning[W09002]: unused variable
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:23:27
   │
23 │     public fun test_match(n: u64) {
   │                           ^ Unused parameter 'n'. Consider removing or prefixing with an underscore: '_n'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E04036]: non-exhaustive pattern
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:24:16
   │
24 │         match (n.
   │                ^^ Pattern '_' not covered

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:25:5
   │
25 │     }
   │     ^
   │     │
   │     Unexpected '}'
   │     Expected an identifier or a decimal number

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:28:1
   │
28 │ 
   │ ^
   │ 
   │ Unexpected end-of-file
   │ Expected ';'
